<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval Auto Shutdown Software
 *
 * Serval Auto Shutdown Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<resources>
    
    <!-- main ui -->
    <string name="main_ui_lbl_about">The Serval Auto Shutdown application will automatically shutdown a device, if after a period of time the the screen is not unlocked. \n\nThis application requires the ability to use root privileges in order to shutdown the device. When enabled for the first time a check for root access will be performed. \n\nThe alert tone, the time delay before shutdown, and other settins can be changed by touching the settings button below. \n\nTo enable the application touch the enable button below. </string>
    
    <string name="main_ui_btn_settings">Settings</string>
    <string name="main_ui_btn_enable">Enable</string>
    <string name="main_ui_btn_disable">Disable</string>
    <string name="main_ui_btn_about">About</string>
    
    <string name="main_ui_dialog_check_for_root">A check to see if this application can run as root will now be performed, if prompted allow the application to run as root.</string>
    <string name="main_ui_dialog_root_denied">The permission to run as root was denied. Ensure this device is rooted and has the su library installed before trying again.</string>
    <string name="main_ui_dialog_enabled">Serval Auto Shutdown is now enabled</string>
    <string name="main_ui_dialog_disabled">Serval Auto Shutdown is disabled</string>
    
    <!-- about ui -->
    <string name="about_ui_lbl_header">About Serval Auto Shutdown</string>
    <string name="about_ui_lbl_version">Serval Auto Shutdown Version: %1$s</string>
    <string name="about_ui_txt">Serval Auto Shutdown Copyright &#xA9; 2012 Serval Project.\n\nThis program comes with ABSOLUTELY NO WARRANTY; for details see <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a>. This is free software, and you are welcome to redistribute it under certain conditions; for details see <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a>.\n\nThe original Auto Shutdown application started as an idea by <a href="http://http://servalpaul.blogspot.com.au/">Dr Paul Gardner-Stephen</a> and implemented by <a href="https://github.com/rbochet">Romain Bochet</a>.\n\nThe Apollo 11 Launch sequence is extracted from <a href="http://history.nasa.gov/ap11fj/01launch.htm">this recording</a> from NASA.\n\nThe EKG beep and flatline sequence is extracted from <a href="http://www.freesound.org/people/FreqMan/sounds/32329/">this recording</a> and used under the terms of a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons</a> license.\n\nThe Steam Train sequence is extracted from <a href="http://www.freesound.org/people/acclivity/sounds/31626/">this recording</a> and used under the terms of a <a href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons</a> license.\n\nRunning commands as root is undertaken using the <a href="http://code.google.com/p/roottools/">RootTools</a> library.</string>
    
    <string name="about_ui_btn_contact">Contact</string>
    <string name="about_ui_btn_back">Back</string>
    
    <string name="about_email_subject">Feedback on the Auto Shutdown Application</string>
    <string name="about_ui_intent_chooser">Send feedback email&#8230;</string>
    
    <string name="about_ui_dialog_no_email">A default email client could not be found, please send any feedback you may have to %1$s</string>

    <!-- lock screen strings -->
    <string name="lock_screen_ui_txt_update">This device will automatically shutdown soon.</string>
    <string name="lock_screen_ui_btn_abort">Abort Auto Shutdown</string>
    <string name="lock_screen_ui_serval_logo">Serval Project Logo, a styalised silhouette of a Serval cat head</string>
    
    <!-- settings strings -->
    <string name="preferences_alert_play_tone_title">Sound before Shutdown</string>
    <string name="preferences_alert_play_tone_summary">Play a sound before shutdown</string>
    <string name="preferences_alert_tone_title">Alert Sound</string>
    <string name="preferences_alert_tone_summary">The sound to play prior to shutdown</string>
    
    <string name="preferences_shutdown_delay_title">Shutdown delay</string>
    <string name="preferences_shutdown_delay_summary">Delay in minutes before autoshutdown occurs</string>
    
    <!-- system strings -->
    <string name="system_application_name">Serval Auto Shutdown</string>
    
    <string name="system_contact_email">autoshutdown@servalproject.org</string>
    
    <string name="system_enable_shutdown_preference">preference_enable_shutdown</string>
    
    <string name="system_boot_intent">android.intent.action.BOOT_COMPLETED</string>
    <string name="system_user_present_intent">android.intent.action.USER_PRESENT</string>
    
    <string name="system_abort_shutdown_intent">org.servalproject.autoshutdown.ABORT_SHUTDOWN</string>
    
    <!-- misc strings -->
    <string name="misc_not_available">Not Available</string>

</resources>