<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval Auto Shutdown Software
 *
 * Serval Auto Shutdown Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<TextView
        android:id="@+id/main_ui_lbl_header"
        style="@style/sasHeader"
        android:text="@string/system_application_name" />

    <TextView
        android:id="@+id/main_ui_lbl_about"
        style="@style/sasTextfill"
        android:text="@string/main_ui_lbl_about" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/sasLayout" >

        <Button
            android:id="@+id/main_ui_btn_settings"
            style="@style/sasButton"
            android:text="@string/main_ui_btn_settings" />
        
        <Button
            android:id="@+id/main_ui_btn_enable"
            style="@style/sasButton"
            android:text="@string/main_ui_btn_enable"/>

        <Button
            android:id="@+id/main_ui_btn_about"
            style="@style/sasButton"
            android:text="@string/main_ui_btn_about" />

    </LinearLayout>

</LinearLayout>